RESOLVED FIXED191753
WebKit.UnavailablePlugIn API test is crashing in debug
https://bugs.webkit.org/show_bug.cgi?id=191753
Summary WebKit.UnavailablePlugIn API test is crashing in debug
Chris Dumez
Reported 2018-11-16 10:03:23 PST
WebKit.UnavailablePlugIn API test is crashing in debug: TestWebKitAPI.WebKit.UnavailablePlugIn _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. ASSERTION FAILED: Completion handler should not be called more than once m_function /Volumes/Data/WebKit/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/CompletionHandler.h(58) : Out WTF::CompletionHandler<void (WebKit::PluginModuleLoadPolicy, const WTF::String &)>::operator()(In...) 1 0x1086367e9 WTFCrash 2 0x10db78434 WTF::CompletionHandler<void (WebKit::PluginModuleLoadPolicy, WTF::String const&)>::operator()(WebKit::PluginModuleLoadPolicy, WTF::String const&) 3 0x10db78198 WebKit::NavigationState::NavigationClient::decidePolicyForPluginLoad(WebKit::WebPageProxy&, WebKit::PluginModuleLoadPolicy, API::Dictionary&, WTF::CompletionHandler<void (WebKit::PluginModuleLoadPolicy, WTF::String const&)>&&) 4 0x10dcfe664 WebKit::WebPageProxy::findPlugin(WTF::String const&, unsigned int, WTF::String const&, WTF::String const&, WTF::String const&, bool, WTF::CompletionHandler<void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool)>&&) 5 0x10e6680e0 void IPC::callMemberFunctionImpl<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(WTF::String const&, unsigned int, WTF::String const&, WTF::String const&, WTF::String const&, bool, WTF::CompletionHandler<void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool)>&&), void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool), std::__1::tuple<WTF::String, unsigned int, WTF::String, WTF::String, WTF::String, bool>, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(WTF::String const&, unsigned int, WTF::String const&, WTF::String const&, WTF::String const&, bool, WTF::CompletionHandler<void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool)>&&), WTF::CompletionHandler<void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool)>&&, std::__1::tuple<WTF::String, unsigned int, WTF::String, WTF::String, WTF::String, bool>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul>) 6 0x10e667090 void IPC::callMemberFunction<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(WTF::String const&, unsigned int, WTF::String const&, WTF::String const&, WTF::String const&, bool, WTF::CompletionHandler<void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool)>&&), void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool), std::__1::tuple<WTF::String, unsigned int, WTF::String, WTF::String, WTF::String, bool>, std::__1::integer_sequence<unsigned long, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul> >(std::__1::tuple<WTF::String, unsigned int, WTF::String, WTF::String, WTF::String, bool>&&, WTF::CompletionHandler<void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool)>&&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(WTF::String const&, unsigned int, WTF::String const&, WTF::String const&, WTF::String const&, bool, WTF::CompletionHandler<void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool)>&&)) 7 0x10e62eaaf void IPC::handleMessageDelayed<Messages::WebPageProxy::FindPlugin, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(WTF::String const&, unsigned int, WTF::String const&, WTF::String const&, WTF::String const&, bool, WTF::CompletionHandler<void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool)>&&)>(IPC::Connection&, IPC::Decoder&, std::__1::unique_ptr<IPC::Encoder, std::__1::default_delete<IPC::Encoder> >&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(WTF::String const&, unsigned int, WTF::String const&, WTF::String const&, WTF::String const&, bool, WTF::CompletionHandler<void (unsigned long long, WTF::String const&, unsigned int, WTF::String const&, bool)>&&)) 8 0x10e62815e WebKit::WebPageProxy::didReceiveSyncMessage(IPC::Connection&, IPC::Decoder&, std::__1::unique_ptr<IPC::Encoder, std::__1::default_delete<IPC::Encoder> >&) 9 0x10d517fcf IPC::MessageReceiverMap::dispatchSyncMessage(IPC::Connection&, IPC::Decoder&, std::__1::unique_ptr<IPC::Encoder, std::__1::default_delete<IPC::Encoder> >&) 10 0x10dafd75c WebKit::ChildProcessProxy::dispatchSyncMessage(IPC::Connection&, IPC::Decoder&, std::__1::unique_ptr<IPC::Encoder, std::__1::default_delete<IPC::Encoder> >&) 11 0x10ddf37e2 WebKit::WebProcessProxy::didReceiveSyncMessage(IPC::Connection&, IPC::Decoder&, std::__1::unique_ptr<IPC::Encoder, std::__1::default_delete<IPC::Encoder> >&) 12 0x10d4adb42 IPC::Connection::dispatchSyncMessage(IPC::Decoder&) 13 0x10d4a0832 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 14 0x10d4a013f IPC::Connection::SyncMessageState::dispatchMessages(IPC::Connection*) 15 0x10d4a72fa IPC::Connection::waitForSyncReply(unsigned long long, WTF::Seconds, WTF::OptionSet<IPC::SendSyncOption>) 16 0x10d4a5281 IPC::Connection::sendSyncMessage(unsigned long long, std::__1::unique_ptr<IPC::Encoder, std::__1::default_delete<IPC::Encoder> >, WTF::Seconds, WTF::OptionSet<IPC::SendSyncOption>) 17 0x10df7aa89 bool IPC::Connection::sendSync<Messages::WebPage::AcceptsFirstMouse>(Messages::WebPage::AcceptsFirstMouse&&, Messages::WebPage::AcceptsFirstMouse::Reply&&, unsigned long long, WTF::Seconds, WTF::OptionSet<IPC::SendSyncOption>) 18 0x10df5ed01 bool WebKit::ChildProcessProxy::sendSync<Messages::WebPage::AcceptsFirstMouse>(Messages::WebPage::AcceptsFirstMouse&&, Messages::WebPage::AcceptsFirstMouse::Reply&&, unsigned long long, WTF::Seconds, WTF::OptionSet<IPC::SendSyncOption>) 19 0x10df5ebee WebKit::WebPageProxy::acceptsFirstMouse(int, WebKit::WebMouseEvent const&) 20 0x10dc27133 WebKit::WebViewImpl::acceptsFirstMouse(NSEvent*) 21 0x10da8a316 -[WKWebView acceptsFirstMouse:] 22 0x7fff4847581b -[NSWindow(NSEventRouting) view:acceptsFirstMouseEvent:initialKeyWindow:] 23 0x7fff483bb6dc -[NSWindow(NSEventRouting) _handleMouseDownEvent:isDelayedEvent:] 24 0x7fff482efe33 -[NSWindow(NSEventRouting) _reallySendEvent:isDelayedEvent:] 25 0x7fff482ef2d9 -[NSWindow(NSEventRouting) sendEvent:] 26 0x104a88f37 -[TestWKWebViewHostWindow _mouseDownAtPoint:simulatePressure:clickCount:] 27 0x104a8ae3a -[TestWKWebView(MacOnly) sendClicksAtPoint:numberOfClicks:] 28 0x104aa832b WebKit_UnavailablePlugIn_Test::TestBody() 29 0x104cfcfbe void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 30 0x104ca4aab void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 31 0x104ca49d6 testing::Test::Run()
Attachments
Patch (2.67 KB, patch)
2018-11-16 10:15 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-11-16 10:15:05 PST
WebKit Commit Bot
Comment 2 2018-11-16 11:01:00 PST
Comment on attachment 355071 [details] Patch Clearing flags on attachment: 355071 Committed r238290: <https://trac.webkit.org/changeset/238290>
WebKit Commit Bot
Comment 3 2018-11-16 11:01:01 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-11-16 14:37:18 PST
Note You need to log in before you can comment on or make changes to this bug.