WebKit.UnavailablePlugIn API test is crashing in debug https://bugs.webkit.org/show_bug.cgi?id=191753

Reviewed by Alex Christensen.

Add missing early returns. Those were mistakenly dropped in r235200.

* UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::NavigationClient::decidePolicyForPluginLoad):


Canonical link: https://commits.webkit.org/206484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238290 268f45cc-cd09-0410-ab3c-d52691b4dbfc